--- a/product.html
+++ b/product.html
@@ -66,8 +66,11 @@
       <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
         <div class="col-md-9 ftco-animate pb-5 text-center">
           <h2 class="mb-0 bread">Products</h2>
-          <p style="color: white; font-weight: bolder;">Made with love from <span style="color: rgb(255, 52, 52);">Indonesia</span></p>
-          <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolld">Coconut Charcoal Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span></p>
+          <p style="color: white; font-weight: bolder;">Made with love from <span
+              style="color: rgb(255, 52, 52);">Indonesia</span></p>
+          <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolld">Coconut Charcoal
+                Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span>
+          </p>
         </div>
       </div>
     </div>
@@ -128,25 +131,27 @@
         <div class="row justify-content-center pb-3">
           <div class="col-md-10 heading-section text-center ftco-animate">
             <h2 class="mb-4">Catalogue</h2>
-            <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolldd">Coconut Charcoal Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span></p>
+            <p class="breadcrumbss"><span><a href="#charcoal" class="smoothscrolldd">Coconut Charcoal
+                  Briquettes</a></span><br><span><a href="#coffee" class="smoothscrolld">Java Coffee Preanger</a></span>
+            </p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 mb-5 ftco-animate">
-            <a href="images/coffee.jpg" class="image-popup prod-img-bg"><img src="images/coffee.jpg" class="img-fluid"
+            <a href="images/coffee.jpg" class="image-popup prod-img-bg"><img src="images/work-31.jpg" class="img-fluid"
                 alt="Colorlib Template"></a>
           </div>
           <div class="col-lg-6 product-details pl-md-5 ftco-animate">
-            <h3 style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">Coconut Charcoal Briquettes</h3>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-              paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have
-              been rewritten a thousand times and everything that was left from its origin would be the word "and" and
-              the
-              Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could
-              convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk
-              with
-              Longe and Parole and dragged her into their agency, where they abused her for their.
+            <h3
+              style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
+              Coconut Charcoal Briquettes</h3>
+            <p>Indonesia is one of the largest coconut producers in the world with a very distinctive quality. The use
+              of coconut, of course, besides being consumed as a food ingredient, it can also be made into charcoal
+              briquettes.</p>
+            <p>The briquette charcoal produced from this coconut is extraordinary, has the perfect quality to be used as
+              a substitute for fuel which of course has the advantage of a longer shelf life compared to ordinary
+              charcoal. In addition, the use of coconut shell charcoal makes the briquettes have a fairly high burning
+              heat and also less smoke, odorless and of course we have been certified.
             </p>
           </div>
         </div>
@@ -158,10 +163,10 @@
                 role="tab" aria-controls="v-pills-1" aria-selected="true">Description</a>
 
               <a class="nav-link ftco-animate mr-lg-1" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2"
-                role="tab" aria-controls="v-pills-2" aria-selected="false">Manufacturer</a>
+                role="tab" aria-controls="v-pills-2" aria-selected="false">Certificates</a>
 
               <a class="nav-link ftco-animate" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab"
-                aria-controls="v-pills-3" aria-selected="false">Reviews</a>
+                aria-controls="v-pills-3" aria-selected="false">Other</a>
 
             </div>
           </div>
@@ -171,13 +176,10 @@
 
               <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="day-1-tab">
                 <div class="p-4">
-                  <h3 class="mb-4">Bacardi 151 Degree</h3>
-                  <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would
-                    have been rewritten a thousand times and everything that was left from its origin would be the word
-                    "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing
-                    the copy said could convince her and so it didn’t take long until a few insidious Copy Writers
-                    ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they
-                    abused her for their.</p>
+                  <h3 class="mb-4">Coconut Charcoal Briquettes</h3>
+                  <p>On her way she met a copy.</p>
+                  <li>asdasdasd</li>
+                  <li>adwqwe</li>
                 </div>
               </div>
 
@@ -336,11 +338,13 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mb-5 ftco-animate">
-            <a href="images/coffee.jpg" class="image-popup prod-img-bg"><img src="images/coffee.jpg" class="img-fluid"
+            <a href="images/coffee.jpg" class="image-popup prod-img-bg"><img src="images/work-9.jpg" class="img-fluid"
                 alt="Colorlib Template"></a>
           </div>
           <div class="col-lg-6 product-details pl-md-5 ftco-animate">
-            <h3 style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">Java Coffee Preanger</h3>
+            <h3
+              style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
+              Java Coffee Preanger</h3>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
               paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
             <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have
@@ -361,10 +365,10 @@
                 role="tab" aria-controls="v-pills-1" aria-selected="true">Description</a>
 
               <a class="nav-link ftco-animate mr-lg-1" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2"
-                role="tab" aria-controls="v-pills-2" aria-selected="false">Manufacturer</a>
+                role="tab" aria-controls="v-pills-2" aria-selected="false">Certificates</a>
 
               <a class="nav-link ftco-animate" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab"
-                aria-controls="v-pills-3" aria-selected="false">Reviews</a>
+                aria-controls="v-pills-3" aria-selected="false">Other</a>
 
             </div>
           </div>
@@ -374,7 +378,7 @@
 
               <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="day-1-tab">
                 <div class="p-4">
-                  <h3 class="mb-4">Bacardi 151 Degree</h3>
+                  <h3 class="mb-4">Original from Indonesia</h3>
                   <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would
                     have been rewritten a thousand times and everything that was left from its origin would be the word
                     "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing
@@ -386,7 +390,7 @@
 
               <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-day-2-tab">
                 <div class="p-4">
-                  <h3 class="mb-4">Manufactured By Liquor Store</h3>
+                  <h3 class="mb-4">Manufactured By</h3>
                   <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would
                     have been rewritten a thousand times and everything that was left from its origin would be the word
                     "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing
