--- a/product.html
+++ b/product.html
@@ -53,6 +53,7 @@
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="faq.html" class="nav-link">FaQ</a></li>
         </ul>
       </div>
     </div>
