--- a/product.html
+++ b/product.html
@@ -149,7 +149,7 @@
             <p>Indonesia is one of the largest coconut producers in the world with a very distinctive quality. The use
               of coconut, of course, besides being consumed as a food ingredient, it can also be made into charcoal
               briquettes.</p>
-            <p>The briquette charcoal produced from this coconut is extraordinary, has the perfect quality to be used as
+            <p id="atas" >The briquette charcoal produced from this coconut is extraordinary, has the perfect quality to be used as
               a substitute for fuel which of course has the advantage of a longer shelf life compared to ordinary
               charcoal. In addition, the use of coconut shell charcoal makes the briquettes have a fairly high burning
               heat and also less smoke, odorless and of course we have been certified.
@@ -200,7 +200,7 @@
                             quality. We can also pack briquettes according to your requirements.</p>
 
                         </div>
-                        <p class="button text-center"><span class="btn btn-primary px-4 py-3">Desctiption</span></p>
+                        <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Go to Spec.</a></p>
                       </div>
                     </div>
                     <div class="col-md-6 ftco-animate">
@@ -220,7 +220,7 @@
                             briquettes. In addition, briquettes from coconut shell charcoal are also safer,
                             environmentally friendly, because they do not cause smoke.</p>
                         </div>
-                        <p class="button text-center"><span class="btn btn-primary px-4 py-3">Function</span></p>
+                        <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Go to Spec.</a></p>
                       </div>
                     </div>
                   </div>
@@ -234,61 +234,61 @@
                     <div class="col-md-3 ftco-animate">
                       <div class="pricing-entry pb-5 text-center">
                         <div>
-                          <h3 class="mb-4">Cube Shape</h3>
+                          <p><span class="price">Cube</span></p>
                         </div>
                         <ul>
                           <li>20x20x20mm</li>
                           <li>25x25x25mm</li>
                         </ul>
                         <p><br></p>
-                        <p><span class="per">Minimum Order</span> <br> <span class="price">20 Ft</span> <span
+                        <p><span class="per">Minimum Order Quantity</span> <br> <span class="mb-4">20 Ft</span> <span
                             class="per"> Container</span></p>
-                        <p class="button text-center"><span class="btn btn-primary px-4 py-3">Contact us</span></p>
+                            <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                     <div class="col-md-3 ftco-animate">
                       <div class="pricing-entry pb-5 text-center">
                         <div>
-                          <h3 class="mb-4">Hexagonal Shape</h3>
+                          <p><span class="price">Hexagonal</span></p>
                         </div>
                         <ul>
                           <li>20x50mm</li>
                           <li>20x35mm</li>
                         </ul>
                         <p><br></p>
-                        <p><span class="per">Minimum Order</span> <br> <span class="price">20 Ft</span> <span
-                            class="per"> Container</span></p>
-                        <p class="button text-center"><span class="btn btn-primary px-4 py-3">Contact us</span></p>
+                        <p><span class="per">Minimum Order Quantity</span> <br> <span class="mb-4">20 Ft</span> <span
+                          class="per"> Container</span></p>
+                          <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                     <div class="col-md-3 ftco-animate">
                       <div class="pricing-entry pb-5 text-center">
                         <div>
-                          <h3 class="mb-4">Cylinder Shape</h3>
+                          <p><span class="price">Cylinder</span></p>
                         </div>
                         <ul>
                           <li>20x50mm</li>
                           <li>and custom size.</li>
                         </ul>
                         <p><br></p>
-                        <p><span class="per">Minimum Order</span> <br> <span class="price">20 Ft</span> <span
-                            class="per"> Container</span></p>
-                        <p class="button text-center"><span class="btn btn-primary px-4 py-3">Contact us</span></p>
+                        <p><span class="per">Minimum Order Quantity</span> <br> <span class="mb-4">20 Ft</span> <span
+                          class="per"> Container</span></p>
+                          <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                     <div class="col-md-3 ftco-animate">
                       <div class="pricing-entry pb-5 text-center">
                         <div>
-                          <h3 class="mb-4">Packaging</h3>
+                          <p><span class="price">Packaging</span></p>
                         </div>
                         <ul>
                           <li>Small Box (1kg, 500gr)</li>
                           <li>Big Box (10kg, 20kg)</li>
                         </ul>
                         <p><br></p>
-                        <p><span class="per">For other box Sizes, Design</span> <br> <span class="price">and</span>
-                          <span class="per">Brand available too.</span></p>
-                        <p class="button text-center"><span class="btn btn-primary px-4 py-3">Contact us</span></p>
+                        <p><span class="per">For other box Sizes, Design</span> <br>
+                          <span class="per">and your Brand available too.</span></p>
+                          <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                   </div>
