--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<h1 class="mb-4">find your coconut charcoal briquettes <span
 								style="color: rgb(190, 145, 90);">&amp;</span> coffee here</h1>
 						<p><a href="product.html" class="btn btn-primary btn-outline-primary px-3 py-2">Products</a>
-							<a href="contact.html" class="btn btn-primary btn-outline-primary px-3 py-2">Contacts</a>
+							<a href="about.html" class="btn btn-primary btn-outline-primary px-3 py-2">About Us</a>
 						</p>
 					</div>
 				</div>
