--- a/about.html
+++ b/about.html
@@ -236,7 +236,7 @@
 								<img src="images/logo1.png" alt="Homepage">
 							</a>
 						</h1>
-						<h2 style="font-family: Kaushan Script, cursive;">We just not sale, <br> We Build Trust!</h2>
+						<h2>We just not sale, <br> We Build Trust!</h2>
 						<p>A prosperous country called Indonesia which has a diversity of cultures, resources and
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
