--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
 					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
