--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Links</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block smoothscroll">Home</a></li>
+							<li><a href="#" class="py-2 d-block smoothscrolld">Home</a></li>
 							<li><a href="product.html" class="py-2 d-block">Products</a></li>
 							<li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
 							<li><a href="about.html" class="py-2 d-block">About</a></li>
