--- a/about.html
+++ b/about.html
@@ -302,7 +302,7 @@
 							<li><a href="index.html" class="py-2 d-block">Home</a></li>
 							<li><a href="product.html" class="py-2 d-block">Products</a></li>
 							<li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-							<li><a href="#" class="py-2 d-block smoothscroll">About</a></li>
+							<li><a href="#" class="py-2 d-block smoothscrolld">About</a></li>
 							<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 						</ul>
 					</div>
