--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
 							<li><a href="product.html" class="py-2 d-block">Products</a></li>
 							<li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
 							<li><a href="about.html" class="py-2 d-block">About</a></li>
-							<li><a href="#" class="py-2 d-block smoothscroll">Contact</a></li>
+							<li><a href="#" class="py-2 d-block smoothscrolld">Contact</a></li>
 						</ul>
 					</div>
 				</div>
