--- a/gallery.html
+++ b/gallery.html
@@ -277,7 +277,7 @@
             <ul class="list-unstyled">
               <li><a href="index.html" class="py-2 d-block">Home</a></li>
               <li><a href="product.html" class="py-2 d-block">Products</a></li>
-              <li><a href="#" class="py-2 d-block smoothscroll">Gallery</a></li>
+              <li><a href="#" class="py-2 d-block smoothscrolld">Gallery</a></li>
               <li><a href="about.html" class="py-2 d-block">About</a></li>
               <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
             </ul>
