--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -99,7 +100,7 @@
 								<img src="images/logo1.png" alt="Homepage">
 							</a>
 						</h1>
-						<h2>We just not sale, <br> We Build Trust!</h2>
+						<h2 style="font-family: Kaushan Script, cursive; text-transform: capitalize">We just not sale, <br> We Build Trust!</h2>
 						<p>A prosperous country called Indonesia which has a diversity of cultures, resources and
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
