--- a/about.html
+++ b/about.html
@@ -232,11 +232,11 @@
 				<div class="col-md-3 text-center d-flex align-items-stretch">
 					<div class="text-about py-5 px-4">
 						<h1 class="logo">
-							<a class="site-logo" href="index.html">
+							<a class="mid-logo" href="index.html">
 								<img src="images/logo1.png" alt="Homepage">
 							</a>
 						</h1>
-						<h2 style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 22px; color: #4b4b4d;">We just not sale, We Build Trust!</h2>
+						<h2 style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 20px; color: #4b4b4d;">We just not sale, We Build Trust!</h2>
 						<p>A prosperous country called Indonesia which has a diversity of cultures, resources and
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
@@ -264,8 +264,8 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<a class="ftco-heading-2 logo" href="index.html">
-							<img src="images/logo2.png" alt="Homepage">
+						<a class="ftco-heading-2 foot-logo" href="index.html">
+							<img src="images/logoo.png" alt="Homepage">
 						</a>
 						<p> <br> Paramartha Agro is a company that provides agro products that are processed
 							organically
