--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<div class="col-md-3 text-center d-flex align-items-stretch">
 					<div class="text-about py-5 px-4">
 						<h1 class="logo">
-							<a class="site-logo" href="index.html">
+							<a class="mid-logo" href="index.html">
 								<img src="images/logo1.png" alt="Homepage">
 							</a>
 						</h1>
@@ -443,8 +443,8 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<a class="ftco-heading-2 logo" href="index.html">
-							<img src="images/logo2.png" alt="Homepage">
+						<a class="ftco-heading-2 foot-logo" href="index.html">
+							<img src="images/logoo.png" alt="Homepage">
 						</a>
 						<p> <br> Paramartha Agro is a company that provides agro products that are processed organically
 							and
