--- a/product.html
+++ b/product.html
@@ -407,8 +407,8 @@
       <div class="row mb-5">
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
-            <a class="ftco-heading-2 logo" href="index.html">
-              <img src="images/logo2.png" alt="Homepage">
+            <a class="ftco-heading-2 foot-logo" href="index.html">
+              <img src="images/logoo.png" alt="Homepage">
             </a>
             <p> <br> Paramartha Agro is a company that provides agro products that are processed organically
               and
